codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__cyber_policy_error_event_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
ⓘ 无法显示此内容
  对于网络安全相关请求，我们会格外谨慎。如果你是安全专业人员，或许可以申请可信
  访问权限。
  可信访问: https://openai.com/form/enterprise-trusted-access-for-cyber/
  了解更多: https://help.openai.com/en/articles/20001326
